# Atomic-Leads

./: .gitignore  PROGRESS.md
atomic-leads/: .env.example  README.md  docker-compose.yml  package-lock.json  package.json  proxy.ts
atomic-leads/app/: globals.css  layout.tsx
atomic-leads/app/(auth)/sign-in/[[...sign-in]]/: page.tsx
atomic-leads/app/(auth)/sign-up/[[...sign-up]]/: page.tsx
atomic-leads/app/(main)/: layout.tsx  page.tsx
atomic-leads/app/(main)/dashboard/: page.tsx
atomic-leads/components/auth/: auth-shell.tsx
atomic-leads/components/dashboard/: lead-engine-scaffold.tsx
atomic-leads/components/forms/: lead-form.tsx
atomic-leads/components/layout/: auth-header.tsx
atomic-leads/components/providers/: app-providers.tsx
atomic-leads/components/ui/: carousel.tsx
atomic-leads/lib/auth/: routes.ts
atomic-leads/lib/notifications/: beams-client.ts
atomic-leads/lib/realtime/: pusher-client.ts  pusher-server.ts
atomic-leads/lib/validation/: lead-form-schema.ts
atomic-leads/prisma/: schema.prisma
atomic-leads/prisma/migrations/20260527000000_init_postgresql/: migration.sql
services/: .env.example  .gitignore  README.md  install.ps1  install.sh
services/analyzer/: .env.example  README.md  pyproject.toml
services/analyzer/src/atomic_analyzer/: __init__.py  __main__.py  auditor.py  bot_detect.py  cli.py  config.py  contact_finder.py  contact_pages.py  export.py  fetch.py  io.py  models.py  page_context.py  playwright_fetch.py  scoring.py  smart_fetch.py
services/analyzer/src/atomic_analyzer/checks/: __init__.py  p1.py  runner.py
services/atomic_models/: pyproject.toml
services/atomic_models/src/atomic_models/: __init__.py  audit.py  classify.py  constants.py  io.py  lead.py  outreach.py  run.py  urls.py
services/outreach/: .env.example  README.md  pyproject.toml
services/outreach/src/atomic_outreach/: __main__.py  cli.py  config.py  export.py  generator.py  prompts.py
services/pipeline/: pyproject.toml
services/pipeline/src/atomic_pipeline/: __main__.py  cli.py
services/scraper/: .env.example  README.md  pyproject.toml
services/scraper/src/atomic_scraper/: __init__.py  __main__.py  cli.py  config.py  export.py  models.py
services/scraper/src/atomic_scraper/scrapers/: __init__.py  google_maps.py
