[project]
name = "atomic-analyzer"
version = "0.1.0"
description = "Website auditor for Atomic Leads outreach pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "atomic-models",
  "beautifulsoup4>=4.12.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "typer>=0.15.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
atomic-audit = "atomic_analyzer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atomic_analyzer"]

[tool.ruff]
line-length = 100
target-version = "py311"
