[project]
name = "atomic-models"
version = "0.1.0"
description = "Shared data models for the Atomic Leads Python pipeline"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.10.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atomic_models"]
