[project]
name = "atomic-outreach"
version = "0.1.0"
description = "Natural outreach email drafts for Atomic Leads"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "atomic-models",
  "openai>=1.60.0",
  "pydantic>=2.10.0",
  "typer>=0.15.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
atomic-outreach = "atomic_outreach.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atomic_outreach"]
