[project]
name = "atomic-pipeline"
version = "0.1.0"
description = "Run the full Atomic Leads scrape → audit → email pipeline"
requires-python = ">=3.11"
dependencies = [
  "atomic-models",
  "atomic-scraper",
  "atomic-analyzer",
  "atomic-outreach",
  "typer>=0.15.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
atomic-pipeline = "atomic_pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atomic_pipeline"]
