[project]
name = "atomic-scraper"
version = "0.1.0"
description = "Google Maps lead scraper for Atomic Leads"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "atomic-models",
  "playwright>=1.49.0",
  "pydantic>=2.10.0",
  "typer>=0.15.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
atomic-scrape = "atomic_scraper.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atomic_scraper"]

[tool.ruff]
line-length = 100
target-version = "py311"
